--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<modules>
 		<module>xxl-job-core</module>
 		<module>xxl-job-admin</module>
-		<module>xxl-job-executor-samples</module>
+		<module>xxl-job-executor</module>
     </modules>
 
 	<properties>
@@ -27,7 +27,7 @@
 		<netty-all.version>4.1.54.Final</netty-all.version>
 		<gson.version>2.8.6</gson.version>
 
-		<spring.version>5.3.1</spring.version>
+		<spring.version>5.3.3</spring.version>
 		<spring-boot.version>2.4.0</spring-boot.version>
 
 		<mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
