--- a/xxl-job-executor/src/main/resources/application.properties
+++ b/xxl-job-executor/src/main/resources/application.properties
@@ -1,5 +1,14 @@
+# web port
+server.port=11081
+# no web
+#spring.main.web-environment=false
+
+# log config
+logging.config=classpath:logback.xml
+
+
 ### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+xxl.job.admin.addresses=http://127.0.0.1:10080/xxl-job-admin
 
 ### xxl-job, access token
 xxl.job.accessToken=
@@ -10,8 +19,8 @@ xxl.job.executor.appname=xxl-job-executor-sample
 xxl.job.executor.address=
 ### xxl-job executor server-info
 xxl.job.executor.ip=
-xxl.job.executor.port=9998
+xxl.job.executor.port=0
 ### xxl-job executor log-path
-xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
+xxl.job.executor.logpath=/data/workdir/xxl_job/jobhandler
 ### xxl-job executor log-retention-days
 xxl.job.executor.logretentiondays=30
